# Personal_Engineering_OS

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  DISCOVERY_ANSWERS.md  FUTURE_SCOPE.md  KNOWN_LIMITATIONS.md  Makefile  PROJECT_CONTEXT.md  README.md  SECURITY.md  blocked_tasks.md  decisions.jsonl  escalation_queue.md  install.py  main.py  morning_brief.md  pyproject.toml  requirements.txt  smoke_test.py
.agents/: plugin.yaml
.codex/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md  repository.yaml
.projectos_state/: benchmark_history.jsonl  quality_deltas.jsonl
agents/: __init__.py  architecture_agent.py  code_review_agent.py  code_writing_agent.py  docs_agent.py  planning_agent.py  project_intake_agent.py  test_agent.py
cli/: __init__.py  dashboard.py  main.py
config/: models.yaml  projectos.yaml  projectos.yaml.example
core/: __init__.py  agent_registry.py  base_agent.py  clone_agent.py  config_loader.py  decision_log.py  events.py  fallback_router.py  git_manager.py  model_provider.py  persistence.py  phase_manager.py  pre_write_validator.py  project_config.py  project_context.py  project_scheduler.py  projectos.py  provider_health.py  retry.py  safety.py  task_decomposer.py  task_queue.py  template_manager.py  trigger_system.py
docs/: ARCHITECTURE_DECISIONS.md  CHANGELOG.md  DEMO_SCRIPT.md  DOGFOODING.md  EXTERNAL_PROJECT.md  FAQ.md  OLLAMA_SETUP.md  PRODUCTION_READINESS.md  PROJECT_SUMMARY.md  RELEASE_NOTES_v0.5.0.md  benchmark_results.md  performance_report.md  phase4_quality_delta.md  real_api_findings.md  social_preview_text.md
mcp_server/: __init__.py  server.py
projectos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
providers/: __init__.py  ollama_provider.py
reviews/: base_agent.py_2026-06-07T12-25-39-264750+00-00_review.md  clone_agent.py_2026-06-07T12-25-40-775675+00-00_review.md  (+7 more)
scripts/: benchmark.py  dogfood.py  (+18 more)
(+281 files in other folders)
