[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "projectos"
version = "0.6.0"
description = "Personal Engineering OS — autonomous multi-agent system for software project management"
authors = [{ name = "Aryan Kumar", email = "22f2000697@ds.study.iitm.ac.in" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.5.0",
    "click>=8.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-timeout",
]

[project.scripts]
projectos = "cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "cli*",
    "core*",
    "agents*",
    "config*",
    "reviews*",
    "providers*",
    "mcp_server*",
    "scripts*",
]
namespaces = true
